Add Prettier and format script

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
+    "format": "prettier --write --cache \"**/*.{js,mjs,cjs,ts,mts,cts,json,yaml,yml,gql,graphql,md}\"",
+    "format:check": "prettier --check --cache \"**/*.{js,mjs,cjs,ts,mts,cts,json,yaml,yml,gql,graphql,md}\"",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
@@ -41,6 +43,7 @@
     "changelogen": "^0.5.5",
     "eslint": "^9.4.0",
     "nuxt": "^3.12.1",
+    "prettier": "^3.3.2",
     "typescript": "latest",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
