--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nuxt/module-builder": "^0.7.1",
     "@nuxt/schema": "^3.12.1",
     "@nuxt/test-utils": "^3.13.1",
+    "@nuxt/ui": "^2.17.0",
     "@types/node": "^20.14.2",
     "changelogen": "^0.5.5",
     "eslint": "^9.4.0",
@@ -51,5 +52,8 @@
     "typescript": "latest",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
+  },
+  "resolutions": {
+    "nuxt-request-timeline": "link:."
   }
 }
