--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,7 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "nuxt": "^3.12.1"
+    "nuxt": "^3.12.1",
+    "nuxt-request-timeline": "workspace:*"
   }
 }
