--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "exports": {
     ".": {
       "types": "./dist/types.d.ts",
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "import": "./dist/module.mjs"
+    },
+    "./types": {
+      "types": "./src/types.d.ts"
     }
   },
   "main": "./dist/module.cjs",
