--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "nuxt": "^3.12.1",
-    "nuxt-request-timeline": "workspace:*"
+    "nuxt-request-timeline": "workspace:*",
+    "sass": "^1.77.6"
   }
 }
