--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,20 @@
-name: CI
+name: Release
 
 on:
   push:
     branches:
       - main
-  pull_request:
-
-concurrency:
-  group: ${{ github.head_ref || github.run_id }}-${{ github.event_name }}-ci
-  cancel-in-progress: true
+      - beta
 
 jobs:
-  ci:
+  release:
+    name: Release
     runs-on: ubuntu-latest
-
-    env:
-      NODE_ENV: test
-
     steps:
       - name: Checkout branch 🛎
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install pnpm 👨🏻‍💻
         uses: pnpm/action-setup@v4
@@ -35,15 +30,8 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: pnpm install
 
-      - name: Prepare types 🛠️
-        run: pnpm nuxt-module-build prepare
-
-      - name: Run linter 👀
-        run: pnpm run lint
-
-      - name: Run format check 💄
-        run: pnpm run format:check
-
-      # TODO: Fix the tests
-      # - name: Run tests 🧪
-      #   run: pnpm run test
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
