--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,11 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
+    "@urql/core": "^5.0.4",
+    "@urql/exchange-graphcache": "^7.1.1",
+    "@urql/vue": "^1.3.2",
     "nuxt": "^3.12.1",
-    "nuxt-request-timeline": "workspace:*"
+    "nuxt-request-timeline": "workspace:*",
+    "sass": "^1.77.6"
   }
 }
