--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Checkout branch 🛎
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.CI_GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Install pnpm 👨🏻‍💻
