--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     },
     "./types": {
       "types": "./src/types.d.ts"
+    },
+    "./utils": {
+      "types": "./dist/runtime/utils.d.ts",
+      "import": "./dist/runtime/utils.js"
     }
   },
   "main": "./dist/module.cjs",
