--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.12.1"
+    "@nuxt/kit": "3.10.0 - 3.12.x"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.3",
